2002-04-02  Paul Kienzle <pkienzle@users.sf.net>

	* linear-algebra/cross.m: Accept nx3 and 3xn matrices, in addition
	to vectors.  Issue a warning in the case x matches y' but return a
	column vector as Octave currently does.

	* plot/contour.m: Set default number of levels for contour(x,y,z).

	* control/system/starp.m: Leave more of the documentation
	processing to texinfo and less to the @format block.

	* image/imagesc.m: Only display image if no output is requested.
	Code tidying.

2002-03-07  Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>
 
 	* statistics/base/center.m: Accept and return empty matrix.
 	
2002-02-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/erfinv.m: Fix usage message.

2002-02-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* elfun/coth.m: Use 1 ./ tanh(z) instead of cosh(z) ./ sinh(z).
	From "Michael O'Brien" <mobrien@kento.unm.edu>.

2001-06-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* statistics/distributions/discrete_cdf.m: Downcase incorrectly
	capitalized variable names.

2001-05-30  Jean-Francois Cardoso  <cardoso@tsi.enst.fr>

	* m/image/saveimage.m: fix saving an image to Postscript format.

2001-04-18  A. Scottedward Hodel <a.s.hodel@eng.auburn.edu>

	* control/system/is_stabilizable.m: Pass a to sys2ss, not sys.

2001-02-28  Kai Habel  <kai.habel@gmx.de>

	* general/cart2pol.m: New file.
	* general/pol2cart.m: New file.
	* general/cart2sph.m: New file.
	* general/sph2cart.m: New file.
	* image/rgb2hsv.m: New file.
	* image/hsv2rgb.m: New file.

2001-02-26  Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* plot/meshgrid.m: Avoid for loops.
	* plot/meshdom.m: Likewise.

2001-02-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/norm.m: Use sqrt instead of ^0.5.

2001-02-22  Heinz Bauschke  <bauschke@cecm.sfu.ca>

	* linear-algebra/norm.m: Use more efficient method for Frobenius
	norm.

2001-02-09  David Livings  <david.livings@asa.co.uk>

	* statistics/tests/welch_test.m: Fix typo.
