@@ -57,21 +57,13 @@ function retval = vander (c)
     usage ("vander (c)");
   endif
 
-  nr = rows (c);
-  nc = columns (c);
-  if (nr == 1 && nc == 1)
-    retval = 1;
-  elseif (nr == 1 || nc == 1)
+  if (is_vector (c))
     n = length (c);
-    if (n > 0)
-      retval = zeros (n, n);
-      for i = 1:n
-        tmp = c(i);
-        for j = 1:n
-          retval (i, j) = tmp ^ (n - j);
-        endfor
-      endfor
-    endif
+    retval = zeros (n, n);
+    j = 1:n;
+    for i = 1:n
+      retval(i,:) = c(i) .^ (n - j);
+    endfor
   else
     error ("vander: argument must be a vector");
   endif
