@@ -1,3 +1,7 @@
+2002-04-03  Paul Kienzle <pkienzle@users.sf.net>
+
+	* special-matrix/vander.m: Code tidy and vectorize.
+
 2002-04-02  Paul Kienzle <pkienzle@users.sf.net>
 
 	* linear-algebra/cross.m: Accept nx3 and 3xn matrices, in addition
